--- a/src/pages/engg-dashboard/engg-dashboard.html
+++ b/src/pages/engg-dashboard/engg-dashboard.html
@@ -26,7 +26,7 @@
     </div>
   </div>
   <hr>
-  <div class="container">
+  <div class="container" (click)="previousComplaint()">
       <div class="box">
       <img src="../../assets/icon/filesearch.png">
       <label>View previous complaint</label>
