--- a/src/pages/admin-create-customer/admin-create-customer.html
+++ b/src/pages/admin-create-customer/admin-create-customer.html
@@ -12,7 +12,7 @@
 
 <ion-content>
   <ion-list lines="none">
-    <form [formGroup]="validations_form"  (ngSubmit)="onSubmit(validations_form.value)">
+    <form [formGroup]="validations_form" (ngSubmit)="onSubmit(validations_form.value)">
 
       <ion-item>
         <ion-label floating>Customer Name</ion-label>
@@ -32,53 +32,112 @@
         <ion-input type="text" formControlName="phone"></ion-input>
       </ion-item>
       <div class="validation-errors">
-          <ng-container *ngFor="let validation of validation_messages.phone">
-            <div class="error-message"
-              *ngIf="validations_form.get('phone').hasError(validation.type) && (validations_form.get('phone').dirty || validations_form.get('phone').touched)">
-              <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
-            </div>
-          </ng-container>
-        </div>
+        <ng-container *ngFor="let validation of validation_messages.phone">
+          <div class="error-message"
+            *ngIf="validations_form.get('phone').hasError(validation.type) && (validations_form.get('phone').dirty || validations_form.get('phone').touched)">
+            <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+          </div>
+        </ng-container>
+      </div>
 
 
       <ion-item>
         <ion-label floating>Alternative Contact number</ion-label>
-        <ion-input type="text"></ion-input>
+        <ion-input type="text" formControlName="alter"></ion-input>
       </ion-item>
+      <div class="validation-errors">
+        <ng-container *ngFor="let validation of validation_messages.alter">
+          <div class="error-message"
+            *ngIf="validations_form.get('alter').hasError(validation.type) && (validations_form.get('alter').dirty || validations_form.get('alter').touched)">
+            <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+          </div>
+        </ng-container>
+      </div>
+
+
       <ion-item>
         <ion-label floating>Email</ion-label>
-        <ion-input type="text"></ion-input>
+        <ion-input type="email" formControlName="email"></ion-input>
       </ion-item>
+      <div class="validation-errors">
+        <ng-container *ngFor="let validation of validation_messages.email">
+          <div class="error-message"
+            *ngIf="validations_form.get('email').hasError(validation.type) && (validations_form.get('email').dirty || validations_form.get('email').touched)">
+            <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+          </div>
+        </ng-container>
+      </div>
+
       <ion-item>
         <ion-label floating>Address</ion-label>
-        <ion-input type="text"></ion-input>
+        <ion-textarea formControlName="address"></ion-textarea>
       </ion-item>
 
       <ion-item>
         <ion-label>Machine purchased</ion-label>
-        <ion-select>
+        <ion-select formControlName="u_MachinePurchased">
           <ion-option *ngFor="let mach of typesOfMachin" [value]="mach">
             {{mach}}</ion-option>
         </ion-select>
       </ion-item>
+      <div class="validation-errors">
+        <ng-container *ngFor="let validation of validation_messages.u_MachinePurchased">
+          <div class="error-message"
+            *ngIf="validations_form.get('u_MachinePurchased').hasError(validation.type) && (validations_form.get('u_MachinePurchased').dirty || validations_form.get('u_MachinePurchased').touched)">
+            <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+          </div>
+        </ng-container>
+      </div>
 
       <ion-item>
         <ion-label>Date of purchase</ion-label>
-        <ion-input type="Date"></ion-input>
+        <ion-input type="Date" formControlName="u_dateOf_Purchased"></ion-input>
       </ion-item>
+      <div class="validation-errors">
+        <ng-container *ngFor="let validation of validation_messages.u_MachinePurchased">
+          <div class="error-message"
+            *ngIf="validations_form.get('u_dateOf_Purchased').hasError(validation.type) && (validations_form.get('u_dateOf_Purchased').dirty || validations_form.get('u_dateOf_Purchased').touched)">
+            <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+          </div>
+        </ng-container>
+      </div>
 
-      <ion-item>
-        <ion-label floating>Password</ion-label>
-        <ion-input type="password"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label floating>Confirm Password</ion-label>
-        <ion-input type="password"></ion-input>
-      </ion-item>
-      
+      <div formGroupName="matching_passwords">
+        <ion-item>
+          <ion-label position="floating" color="primary">Password</ion-label>
+          <ion-input type="password" formControlName="u_password"></ion-input>
+        </ion-item>
+        <div class="validation-errors">
+          <ng-container *ngFor="let validation of validation_messages.u_password">
+            <div class="error-message" *ngIf="validations_form.get('matching_passwords').get('u_password').hasError(validation.type) && (validations_form.get('matching_passwords').get('u_password').dirty || validations_form.get('matching_passwords').get('u_password').touched)">
+              <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+            </div>
+          </ng-container>
+        </div>
+  
+        <ion-item>
+          <ion-label position="floating" color="primary">Confirm Password</ion-label>
+          <ion-input type="password" formControlName="u_cpassword"></ion-input>
+        </ion-item>
+        <div class="validation-errors">
+          <ng-container *ngFor="let validation of validation_messages.u_cpassword">
+            <div class="error-message" *ngIf="validations_form.get('matching_passwords').get('u_cpassword').hasError(validation.type) && (validations_form.get('matching_passwords').get('u_cpassword').dirty || validations_form.get('matching_passwords').get('u_cpassword').touched)">
+              <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+            </div>
+          </ng-container>
+        </div>
+      </div>
+      <!-- These validations are for the form group -->
+      <div class="validation-errors">
+        <ng-container *ngFor="let validation of validation_messages.matching_passwords">
+          <div class="error-message" *ngIf="validations_form.get('matching_passwords').hasError(validation.type) && (validations_form.get('matching_passwords').get('u_cpassword').dirty || validations_form.get('matching_passwords').get('u_cpassword').touched)">
+            <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+          </div>
+        </ng-container>
+      </div>
+
+      <button full color="primary" class="submit-btn" expand="full" type="submit"
+        [disabled]="!validations_form.valid">Submit</button>
     </form>
   </ion-list>
 </ion-content>
-<ion-footer>
-  <button  full color="primary" class="submit-btn" expand="full" type="submit" [disabled]="!validations_form.valid">Submit</button>
-</ion-footer>
