--- a/src/pages/admin-dashboard/admin-dashboard.html
+++ b/src/pages/admin-dashboard/admin-dashboard.html
@@ -26,7 +26,7 @@
           <img src="../../assets/imgs/creatCust.jpeg">
           Create Customer
         </ion-col>
-        <ion-col class="createEngg">
+        <ion-col class="createEngg" (click)="createEngg()">
           <img src="../../assets/imgs/serviceEngg.png">
           Create Service Enginner
         </ion-col>
