--- a/src/pages/admin-dashboard/admin-dashboard.html
+++ b/src/pages/admin-dashboard/admin-dashboard.html
@@ -4,7 +4,7 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<!-- <ion-header>
   <ion-navbar>
     <ion-title>
       <ion-icon ios="ios-home" md="md-home"> Home</ion-icon>
@@ -15,8 +15,9 @@
       </button>
     </ion-buttons>
   </ion-navbar>
-</ion-header>
+</ion-header> -->
 
+<header-component (onClick)="goToHome($event)" [label]="label"></header-component>
 
 <ion-content>
   <section class="container">
