--- a/src/pages/engg-dashboard/engg-dashboard.html
+++ b/src/pages/engg-dashboard/engg-dashboard.html
@@ -4,18 +4,8 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-        <ion-icon ios="ios-home" md="md-home"> Home</ion-icon>
-      </ion-title>
-    <ion-buttons right>
-      <button ion-button icon-only >
-        <ion-icon ios="ios-log-out" md="md-log-out"></ion-icon>
-      </button>
-    </ion-buttons>
-  </ion-navbar>
-</ion-header>
+
+<header-component (onClick)="goToHome($event)" [label]="label"></header-component>
 
 <ion-content padding>
 <section>
