--- a/src/pages/admin-dashboard/admin-dashboard.html
+++ b/src/pages/admin-dashboard/admin-dashboard.html
@@ -33,7 +33,7 @@
         </ion-col>
       </ion-row>
       <ion-row class="firstContainer">
-          <ion-col class="createCustomer">
+          <ion-col class="createCustomer" (click)="assignEng()">
             <img src="../../assets/imgs/assignService.png">
             Assign Enginner
           </ion-col>
