--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,4 +1,4 @@
-<ion-content padding>
+<ion-content >
   <page-loader></page-loader>
   <form class="loginScreen" [formGroup]="validations_form"   (ngSubmit)="login(validations_form.value)" >
       <ion-grid>
