--- a/src/pages/admin-dashboard/admin-dashboard.html
+++ b/src/pages/admin-dashboard/admin-dashboard.html
@@ -37,7 +37,7 @@
             <img src="../../assets/imgs/assignService.png">
             Assign Enginner
           </ion-col>
-          <ion-col class="createEngg">
+          <ion-col class="createEngg" (click)="viewPrevious()">
             <img src="../../assets/imgs/viewComplaint.png">
            View Complaint
           </ion-col>
