--- a/src/pages/admin-create-engg/admin-create-engg.html
+++ b/src/pages/admin-create-engg/admin-create-engg.html
@@ -105,7 +105,8 @@
       <div formGroupName="matching_passwords">
         <ion-item>
           <ion-label position="floating" color="primary">Password<span style="color:red">*</span></ion-label>
-          <ion-input type="password" formControlName="u_password"></ion-input>
+          <ion-input [type]="password_type" formControlName="u_password"></ion-input>
+          <ion-icon name="eye" item-right (click)="changePaswordType()" ></ion-icon> 
         </ion-item>
         <div class="validation-errors">
           <ng-container *ngFor="let validation of validation_messages.u_password">
@@ -117,7 +118,8 @@
   
         <ion-item>
           <ion-label position="floating" color="primary">Confirm Password<span style="color:red">*</span></ion-label>
-          <ion-input type="password" formControlName="u_cpassword"></ion-input>
+          <ion-input [type]="cpassword_type" formControlName="u_cpassword"></ion-input>
+          <ion-icon name="eye" item-right (click)="changecPaswordType()" ></ion-icon> 
         </ion-item>
         <div class="validation-errors">
           <ng-container *ngFor="let validation of validation_messages.u_cpassword">
