--- a/src/pages/cust-details/cust-details.html
+++ b/src/pages/cust-details/cust-details.html
@@ -11,7 +11,7 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-searchbar  (ionInput)="filterList($event)"></ion-searchbar>
+  <ion-searchbar  (ionChange)="filterList($event)"></ion-searchbar>
   <div *ngFor="let d of userDetail">
   <ion-card>
     <ion-card-header>
