--- a/src/pages/admin-create-engg/admin-create-engg.html
+++ b/src/pages/admin-create-engg/admin-create-engg.html
@@ -107,7 +107,7 @@
         <ion-item>
           <ion-label position="floating" color="primary">Password<span style="color:red">*</span></ion-label>
           <ion-input [type]="password_type" formControlName="u_password"></ion-input>
-          <ion-icon name="eye" item-right (click)="changePaswordType()" ></ion-icon> 
+          <button ion-button  style="width:auto"  clear color="dark" type="button" item-right (click)="changePaswordType()"> <ion-icon [name]="passwordEye"> </ion-icon> </button>
         </ion-item>
         <div class="validation-errors">
           <ng-container *ngFor="let validation of validation_messages.u_password">
@@ -120,7 +120,8 @@
         <ion-item>
           <ion-label position="floating" color="primary">Confirm Password<span style="color:red">*</span></ion-label>
           <ion-input [type]="cpassword_type" formControlName="u_cpassword"></ion-input>
-          <ion-icon name="eye" item-right (click)="changecPaswordType()" ></ion-icon> 
+          <button ion-button  style="width:auto"  clear color="dark" type="button" item-right (click)="changecPaswordType()"> <ion-icon [name]="confirmEye"> </ion-icon> </button>
+           
         </ion-item>
         <div class="validation-errors">
           <ng-container *ngFor="let validation of validation_messages.u_cpassword">
