--- a/src/pages/admin-view-previous/admin-view-previous.html
+++ b/src/pages/admin-view-previous/admin-view-previous.html
@@ -12,23 +12,27 @@
 
 <ion-content>
 
-    <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
-  <table>
-    <thead>
-      <th> C.No</th>
-      <th> Complaint</th>
-      <th> Complaint Date </th>
-      <th> Status </th>
-    </thead>
-    <tbody>
-      <tr *ngFor="let c of allcomplaint">
-        <td> {{c.c_id}}</td>
-        <td>
-          {{c.c_desc}}
-        </td>
-        <td> {{c.c_date | convertMachinName}}</td>
-        <td> {{c.c_status}} </td>
-      </tr>
-    </tbody>
-  </table>
+  <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
+  <b *ngIf="allcomplaint.length === 0" style="text-align: center;    display: block;font-size: 2em; color:red;">Data not
+    Found</b>
+  <div *ngFor="let c of allcomplaint">
+    <ion-card>
+      <ion-card-header>
+        <h2><b> {{c.c_id}}</b> </h2>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-row>
+          <ion-col> {{c.c_desc}} </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>Date:</ion-col>
+          <ion-col>{{c.c_date | convertMachinName}}</ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>Status:</ion-col>
+          <ion-col>{{c.c_status}}</ion-col>
+        </ion-row>
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
