--- a/src/reusable_component/header/header_component.html
+++ b/src/reusable_component/header/header_component.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-navbar hideBackButton>
         <ion-title>
-            <ion-icon ios="ios-home" md="md-home"> {{label}} </ion-icon>
+             {{label}} 
         </ion-title>
         <ion-buttons right>
             <button ion-button icon-only (click)="onClickButton($event)">
